# SmartFilamentSensor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
3dmodels/: CMakeLists.txt  export-to-stl.freecad.script.in
3dmodels/CrealityCR10Smart_DualGearExtruder/: Assembly-FilamentSensor.FCStd  Bearing.FCStd  BearingSupport.FCStd  CMakeLists.txt  EngineMainBody.FCStd  EngineShaftWheel.FCStd  FilamentWheel.FCStd  MainBody.FCStd  MovementSensor.FCStd  SharedParameters.FCStd  SmartFilamentSensor.FCStd
cmake/: release.cmake  version.cmake
doc/: Development.md  README.md  Step-by-step.md
releases/0.1/: SmartFilamentSensor-0.1.uf2
releases/0.2.0/: SmartFilamentSensor-0.2.0-PICO.tar.bz2
releases/1.0.0/: SmartFilamentSensor-1.0.0-PICO.tar.bz2
scripts/: release-new-version.sh  release-variables.sh.in
src/: CMakeLists.txt  alarm_output.cpp  alarm_output.h  alarm_state.h  event_controller.cpp  event_controller.h  event_data.h  events_handler.cpp  events_handler.h  main.c  main.cpp  movement_sensor.c  movement_sensor.cpp  movement_sensor.h  movement_state.h  pin_output.cpp  pin_output.h  rgb_led.c  rgb_led.cpp  rgb_led.h  sensor_management.cpp  sensor_management.h  timer.cpp  timer.h
src/event/: constants.h  event_handler.h  event_handler_manualfeed.cpp  event_handler_manualfeed.h  event_handler_moving.cpp  event_handler_moving.h  event_handler_none.cpp  event_handler_none.h  event_handler_retraction.cpp  event_handler_retraction.h  event_handler_suspectiononerror.cpp  event_handler_suspectiononerror.h  event_handler_waitbeforemoving.cpp  event_handler_waitbeforemoving.h  event_handler_waitinginerror.cpp  event_handler_waitinginerror.h
tests/: CMakeLists.txt  event_controller__test.cpp  events_handler__test.cpp  movement_sensor__test.cpp  pin_output__test.cpp  rgb_led__test.cpp  sensor_management__test.cpp  timer__test.cpp
tests/event/: CMakeLists.txt  event_handler_manualfeed__test.cpp  event_handler_moving__test.cpp  event_handler_none__test.cpp  event_handler_retraction__test.cpp  event_handler_suspectiononerror__test.cpp  event_handler_waitbeforemoving__test.cpp  event_handler_waitinginerror__test.cpp  test_common_handler.h
tests/mocklib/: CMakeLists.txt  base_mock.h  clocks.cpp  gpio.cpp  mock_clocks.h  mock_gpio.h  mock_pio.h  mock_time.h  mocklib.cpp  mocklib.h  pio.cpp  time.cpp
tests/mocklib/hardware/: clocks.h  gpio.h  pio.h
tests/mocklib/pico/: stdlib.h  time.h
